# uctx

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: semantic-search.md  show-hn.md
examples/: two_agents_demo.py
tests/: semantic_test.py  smoke_mcp.py  sync_test.py
uctx/: __init__.py  embeddings.py  server.py  setup.py  store.py  sync.py  web.py
