[project]
name = "uctx"
version = "0.1.0"
description = "Portable, local, user-owned context — shared across AI agents over MCP"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrew Meng" }]
keywords = ["mcp", "context", "memory", "agents", "llm", "claude", "cursor", "local-first"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.2.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
]

[project.scripts]
uctx = "uctx.server:main"
uctx-web = "uctx.web:main"
uctx-sync = "uctx.sync:main"

[project.urls]
Homepage = "https://github.com/tmeng7777/uctx"
Repository = "https://github.com/tmeng7777/uctx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uctx"]
